# ros_ws_ugv

./: .gitignore  architecture copy.md  architecture.md  frames.gv  princples.md  tf.txt  tmp.txt  一些问题.md  工程报告.md  录屏说明.md
_/ground_truth/: state.txt
data_process/: evaluate_tracking.py  evaluate_tracking_incert.py  global_path_v_10.txt  global_path_v_20.txt  global_path_v_30.txt  s-k=1.txt  s-k=2.txt  s-k=5.txt  stanley跟踪1.txt  stanley跟踪2.txt  waypoints.csv  纯点跟踪1.txt
data_process/v_10/: pure.txt  pure_v.txt  s-k05.txt
data_process/v_20/: pure.txt  pure_v.txt  s-k05.txt  s-k=01.txt  s-k=05.txt  s-k=2.txt  sk05.txt
data_process/v_30/: pure_v.txt  s-k05.txt
docs/: _05_基础小车模型测试.md  _06_美化小车.md  _07_话题控制各个车轮.md  _07_话题控制车轮.md  _08_速度控制车子运动.md  _09_获取真实速度和位置.md  _10_rviz可视化.md  _11_全局路径.md  _12_局部路径.md  _13_纯点跟踪.md  _14_Stanley路径跟随.md  _15_控制实验模块.md  _16_测试.md
result/: 记录.txt
some_results/: base_path.txt  base_waypoints.txt  ground_truth输出测试.txt  world-base_link的起始状态比较.txt  前轮中心位置的偏移.txt  前轮的PID测试效果.txt  无PID的直行停止测试.txt  直行再停止的控制测试.txt
src/car_model/: package.xml
src/car_model/config/: smart_control_config.yaml
src/car_model/launch/: aligned_topic_logger.launch  cmdvel_circle_test.launch  control.launch  launch.launch  spawn_car.launch
src/car_model/scripts/: ackermann_utils.py  aligned_topic_logger.py  cmdvel2gazebo.py  cmdvel_circle_test.py  plot_cmdvel_circle.py  test_time.py  transform_publisher.py  vehicle_pose_and_velocity_updater.py
src/car_model/urdf/: smart.xacro  smart_v2_3D视觉.xacro  smart_v3_传动关节.xacro  smart_v4_解决前轮的显示bug.xacro
src/control_experiments/: CMakeLists.txt  package.xml
src/control_experiments/launch/: experiment.launch  full_stack_experiment.launch
src/control_experiments/rviz/: smart.rviz
src/control_experiments/scripts/: experiment_runner.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: global_params.yaml
src/my_robot_bringup/launch/: pure_pursuit_sim.launch  pure_pursuit_sim_launch.txt  sim_env.launch  sim_env_launch.txt  stanley_sim copy.launch  stanley_sim.launch
src/my_robot_bringup/rviz/: smart.rviz
src/my_robot_control/: CMakeLists.txt  package.xml  setup.py
src/my_robot_control/config/: gazebo_controllers.yaml  navigation.yaml
src/my_robot_control/launch/: controllers.launch  gazebo_hardware_only.launch
src/my_robot_control/my_robot_control/: __init__.py  ackermann.py  navigation.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_gazebo/: CMakeLists.txt  package.xml
src/my_robot_logger/: CMakeLists.txt  package.xml
src/my_robot_logger/nodes/: global_path_logger.py  ground_truth_logger.py
src/my_robot_msgs/: CMakeLists.txt  package.xml
src/my_robot_msgs/msg/: Lane.msg
src/my_robot_planning/: CMakeLists.txt  package.xml  setup.py
src/my_robot_tracker/: CMakeLists.txt  package.xml  setup.py
src/my_robot_tracker/config/: tracking.yaml  tracking_yaml.txt
src/my_robot_tracker/my_robot_tracker/: __init__.py  algorithms.py  pid.py
src/my_robot_tracker/nodes/: pure_pursuit_node.py  stanley_node.py
src/my_robot_tracker/tests/: pure_pursuit.test  test_pure_pursuit_logic.py  test_pure_pursuit_node.py
src/stanley_controller/: CMakeLists.txt  package.xml
(+39 files in other folders)
