<?xml version="1.0"?>
<package format="2">
  <name>my_robot_logger</name>
  <version>0.0.1</version>
  <description>Ground truth pose logger for recording simulated vehicle trajectories.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>rospkg</exec_depend>

  <export />
</package>
